; ModuleID = '/home/carl/AnghaBench/linux/drivers/platform/chrome/extr_chromeos_laptop.c_chromeos_laptop_detach_i2c_client.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/platform/chrome/extr_chromeos_laptop.c_chromeos_laptop_detach_i2c_client.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, %struct.i2c_peripheral* }
%struct.i2c_peripheral = type { %struct.i2c_client* }
%struct.i2c_client = type { i32 }

@cros_laptop = common dso_local global %struct.TYPE_2__* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.i2c_client*)* @chromeos_laptop_detach_i2c_client to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @chromeos_laptop_detach_i2c_client(%struct.i2c_client* %0) #0 {
  %2 = alloca %struct.i2c_client*, align 8
  %3 = alloca %struct.i2c_peripheral*, align 8
  %4 = alloca i32, align 4
  store %struct.i2c_client* %0, %struct.i2c_client** %2, align 8
  store i32 0, i32* %4, align 4
  br label %5

5:                                                ; preds = %27, %1
  %6 = load i32, i32* %4, align 4
  %7 = load %struct.TYPE_2__*, %struct.TYPE_2__** @cros_laptop, align 8
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 8
  %10 = icmp slt i32 %6, %9
  br i1 %10, label %11, label %30

11:                                               ; preds = %5
  %12 = load %struct.TYPE_2__*, %struct.TYPE_2__** @cros_laptop, align 8
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 1
  %14 = load %struct.i2c_peripheral*, %struct.i2c_peripheral** %13, align 8
  %15 = load i32, i32* %4, align 4
  %16 = sext i32 %15 to i64
  %17 = getelementptr inbounds %struct.i2c_peripheral, %struct.i2c_peripheral* %14, i64 %16
  store %struct.i2c_peripheral* %17, %struct.i2c_peripheral** %3, align 8
  %18 = load %struct.i2c_peripheral*, %struct.i2c_peripheral** %3, align 8
  %19 = getelementptr inbounds %struct.i2c_peripheral, %struct.i2c_peripheral* %18, i32 0, i32 0
  %20 = load %struct.i2c_client*, %struct.i2c_client** %19, align 8
  %21 = load %struct.i2c_client*, %struct.i2c_client** %2, align 8
  %22 = icmp eq %struct.i2c_client* %20, %21
  br i1 %22, label %23, label %26

23:                                               ; preds = %11
  %24 = load %struct.i2c_peripheral*, %struct.i2c_peripheral** %3, align 8
  %25 = getelementptr inbounds %struct.i2c_peripheral, %struct.i2c_peripheral* %24, i32 0, i32 0
  store %struct.i2c_client* null, %struct.i2c_client** %25, align 8
  br label %26

26:                                               ; preds = %23, %11
  br label %27

27:                                               ; preds = %26
  %28 = load i32, i32* %4, align 4
  %29 = add nsw i32 %28, 1
  store i32 %29, i32* %4, align 4
  br label %5

30:                                               ; preds = %5
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
